# blocks_mcp

./: Cargo.toml  Dockerfile  mcp.json
src/: block_scout_api.rs  lib.rs  tools.rs
