[package]
name = "blocks_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.6.0", features = [
    "server",
    "macros",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
] }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
anyhow = "1.0.98"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
axum = { version = "0.8", features = ["macros"] }
schemars = { version = "1.0" }
reqwest = { version = "0.12", features = ["json"] }
hyper = { version = "1" }